# AuroraLang

./: README.md  atomic_call_test.aurs  atomic_debug1.aurs  atomic_debug2.aurs  atomic_load_only_test.aurs  minimal_thread_test.aurs  pi_leibniz_test.aurs  shared_counter_test.aurs  spawn_add_init_test.aurs  spawn_empty_test.aurs  spawn_join_42.aurs  test.aurs  thread_multi_test.aurs  thread_print_debug.aurs  thread_test.aurs  two_thread_debug.aurs  two_thread_one_add.aurs  two_thread_sequential.aurs
docs/: manual_compilation_walkthrough.md  pipeline_convergence.md  stage_n1_direction.md
examples/: exit_only.aur  float6_test.aur  float7_noprint.aur  float7_test.aur  generated.aurs  hello_world.aur  hello_world.aurs  loop_sum.aurs  many_floats.aur  pi_calc.aur  pi_calc.aurs  simple_float.aur
pipeline/: README.md  array_mutation.aurs  debug_parse.js  temp_out.aurs  test_output.js  test_win.js
specs/: TODO.md  aurc_native_rewrite_plan.md  aurora_cnl_to_aur_plan.md  aurora_cnl_vocabulary.md  aurora_compiler_mvp_plan.md  aurora_concurrency_roadmap.md  aurora_language_standard.md  aurora_minimal_isa.md  aurora_parser_design.md  aurora_translation_pipeline.md  aurs_interpreter_arch.md  aurs_interpreter_datastructures.md  aurs_interpreter_helper_plan.md  aurs_interpreter_offset_checklist.md  aurs_interpreter_spec.md  aurs_interpreter_verification.md  aurseed_offset_worklog.md  (+6 more)
src/aurc_native/: CMakeLists.txt  DEPRECATED.md  Makefile  README.md
src/aurc_native/include/: aurc_native.h
src/aurc_native/src/: compiler_stub.c  main.c
src/aurc_native/tests/: README.md
(+148 files in other folders)
